# notepad

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README_EN.md  StartUp.bat  changelog.txt  interface.txt  linux.mk  win.bat  win.mk
src/app/: .qmake.stash  CMakeLists.txt  CmpareMode.cpp  CmpareMode.h  Encode.cpp  Encode.h  MediatorDisplay.cpp  MediatorDisplay.h  MediatorFileTree.cpp  MediatorFileTree.h  QTreeWidgetSortItem.cpp  QTreeWidgetSortItem.h  RCa17752  RcTreeWidget.cpp  RcTreeWidget.h  Sorters.h  StrategyCompare.h  aboutndd.cpp  aboutndd.h  aboutndd.ui  batchfindreplace.cpp  batchfindreplace.h  batchfindreplace.ui  bigfilemessage.cpp  bigfilemessage.h  bigfilemessage.ui  closeDlg.cpp  closeDlg.h  closeDlg.ui  columnedit.cpp  columnedit.h  columnedit.ui  command.h  common.cpp  common.h  ctipwin.cpp  ctipwin.h  ctipwin.ui  dirfindfile.cpp  dirfindfile.h  (+103 more)
src/app/cceditor/: ccnotepad.cpp  ccnotepad.h  ccnotepad.ui  filemanager.cpp  filemanager.h
src/app/include/: pluginGl.h
src/app/qss/: black.qss  common.qss  lightbluestyle.qss  myblack.qss  mystyle.qss  mystyle_new.qss  templetestyle.qss
src/app/themes/Bespin/: AllGlobal.ini  asp.ini  bash.ini  batch.ini  c.ini  cmake.ini  cpp.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  matlab.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  php.ini  props.ini  python.ini  rc.ini  ruby.ini  sql.ini  tcl.ini  txt.ini  vb.ini  verilog.ini  vhdl.ini  xml.ini
src/app/themes/Black board/: AllGlobal.ini  asp.ini  bash.ini  batch.ini  c.ini  cmake.ini  cpp.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  matlab.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  php.ini  props.ini  python.ini  rc.ini  ruby.ini  sql.ini  tcl.ini  txt.ini  vb.ini  verilog.ini  vhdl.ini  xml.ini
src/app/themes/Blue light/: AllGlobal.ini  asp.ini  avs.ini  bash.ini  batch.ini  cmake.ini  coffeescript.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  go.ini  idl.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  matlab.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  props.ini  python.ini  ruby.ini  rust.ini  spice.ini  sql.ini  tcl.ini  txt.ini  vb.ini  verilog.ini  vhdl.ini  xml.ini  yaml.ini
src/app/themes/Choco/: AllGlobal.ini  asp.ini  bash.ini  batch.ini  c.ini  cmake.ini  cpp.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  matlab.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  php.ini  props.ini  python.ini  rc.ini  ruby.ini  sql.ini  tcl.ini  txt.ini  vb.ini  verilog.ini  vhdl.ini  xml.ini
src/app/themes/DansLeRuSH-Dark/: AllGlobal.ini  asp.ini  bash.ini  batch.ini  cmake.ini  coffeescript.ini  cpp.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  matlab.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  php.ini  props.ini  python.ini  rc.ini  ruby.ini  sql.ini  tcl.ini  txt.ini  vb.ini  verilog.ini  vhdl.ini  xml.ini  yaml.ini
src/app/themes/Deep Black/: AllGlobal.ini  asp.ini  bash.ini  batch.ini  c.ini  cmake.ini  cpp.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  matlab.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  php.ini  props.ini  python.ini  rc.ini  ruby.ini  sql.ini  tcl.ini  txt.ini  vb.ini  verilog.ini  vhdl.ini  xml.ini  yaml.ini
src/app/themes/HotFudgeSundae/: AllGlobal.ini  asp.ini  bash.ini  batch.ini  c.ini  cmake.ini  coffeescript.ini  cpp.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  matlab.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  php.ini  props.ini  python.ini  rc.ini  ruby.ini  sql.ini  tcl.ini  txt.ini  vb.ini  verilog.ini  vhdl.ini  xml.ini  yaml.ini
src/app/themes/Mono Industrial/: AllGlobal.ini  asp.ini  bash.ini  batch.ini  c.ini  cmake.ini  cpp.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  matlab.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  php.ini  props.ini  python.ini  rc.ini  ruby.ini  sql.ini  tcl.ini  txt.ini  vb.ini  verilog.ini  vhdl.ini  xml.ini
src/app/themes/Monokai/: AllGlobal.ini  asp.ini  bash.ini  batch.ini  c.ini  cmake.ini  cpp.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  matlab.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  php.ini  props.ini  python.ini  rc.ini  ruby.ini  sql.ini  tcl.ini  txt.ini  vb.ini  verilog.ini  vhdl.ini  xml.ini
src/app/themes/Obsidian/: AllGlobal.ini  asp.ini  bash.ini  batch.ini  cmake.ini  cpp.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  matlab.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  php.ini  props.ini  python.ini  rc.ini  ruby.ini  sql.ini  tcl.ini  txt.ini  vb.ini  verilog.ini  vhdl.ini  xml.ini  yaml.ini
src/app/themes/Plastic Code Wrap/: AllGlobal.ini  asp.ini  bash.ini  batch.ini  c.ini  cmake.ini  cpp.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  matlab.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  php.ini  props.ini  python.ini  rc.ini  ruby.ini  sql.ini  tcl.ini  txt.ini  vb.ini  verilog.ini  vhdl.ini  xml.ini
src/app/themes/Ruby Blue/: AllGlobal.ini  asp.ini  bash.ini  batch.ini  cpp.ini  csharp.ini  css.ini  diff.ini  fortran.ini  fortran77.ini  html.ini  ini.ini  java.ini  javascript.ini  json.ini  lua.ini  makefile.ini  nsis.ini  objc.ini  pascal.ini  perl.ini  php.ini  props.ini  (+9 more)
src/app/translations/: notepad--_zh_CN.qm
src/plugin/helloworld/: CMakeLists.txt
(+511 files in other folders)
